--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_KEY=901b60271feb49feba7e9373e50f78e7
-REACT_APP_API_BASE_URL=
+REACT_APP_API_BASE_URL=https://good-game-server.onrender.com
